[gd_scene load_steps=6 format=3 uid="uid://mkk1h0q6x3wv"]

[ext_resource type="StyleBox" uid="uid://btonwhd5yjpjr" path="res://ui/debug_console/stylebox.tres" id="1_64gx8"]
[ext_resource type="Script" path="res://ui/debug_console/debug_console.gd" id="1_h5kvy"]
[ext_resource type="FontFile" uid="uid://dt5xhr8kuno0i" path="res://fonts/oxygen_mono/Oxygen-Regular.ttf" id="2_0iy3m"]
[ext_resource type="Script" path="res://ui/debug_console/line_edit.gd" id="4_vd180"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3qemi"]
bg_color = Color(0.682353, 0.313726, 0.0509804, 0.392157)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="DebugConsole" type="CanvasLayer"]
layer = 20
script = ExtResource("1_h5kvy")

[node name="DebugConsole" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DebugConsole"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 842.0
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_3qemi")

[node name="VBoxContainer" type="VBoxContainer" parent="DebugConsole/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Body" type="RichTextLabel" parent="DebugConsole/Panel/VBoxContainer"]
layout_mode = 2
offset_right = 822.0
offset_bottom = 599.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
focus_mode = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/normal_font = ExtResource("2_0iy3m")
theme_override_styles/normal = ExtResource("1_64gx8")
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="Edit" type="RichTextLabel" parent="DebugConsole/Panel/VBoxContainer"]
layout_mode = 2
offset_top = 603.0
offset_right = 822.0
offset_bottom = 628.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_0iy3m")
theme_override_styles/normal = ExtResource("1_64gx8")
bbcode_enabled = true
text = "[color=gray]Enter command. . . [/color]"
fit_content_height = true

[node name="LineEdit" type="LineEdit" parent="DebugConsole"]
layout_mode = 2
offset_left = 877.0
offset_top = 230.0
offset_right = 1699.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_0iy3m")
theme_override_styles/normal = ExtResource("1_64gx8")
caret_blink = true
script = ExtResource("4_vd180")

[connection signal="text_changed" from="DebugConsole/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="DebugConsole/LineEdit" to="." method="_on_line_edit_text_submitted"]
